Added simple locale test